added first embedded site

--- a/echo/plugin/SpaPlugin/src/sites/o2/index.html
+++ b/echo/plugin/SpaPlugin/src/sites/o2/index.html
@@ -13,6 +13,8 @@
 </head>
 
 <body>
+    <p>This is some content</p>
+    <button id="clicker">D something</button>
   <script src="js/scripts.js"></script>
 </body>
 </html>
