--- a/echo/plugin/SpaPlugin/src/sites/o2/index.html
+++ b/echo/plugin/SpaPlugin/src/sites/o2/index.html
@@ -13,8 +13,14 @@
 </head>
 
 <body>
-    <p>This is some content</p>
-    <button id="clicker">D something</button>
+  <p>This is some content</p>
+  <button id="clicker">D something</button>
   <script src="js/scripts.js"></script>
+
+  <ul>
+      <li><a href="https://www.ato.gov.au/">External site</a></li>
+      <li><a href="http://www.http2demo.io/">External (no cert)</a></li>
+  </ul>
+
 </body>
 </html>
