include base tag

--- a/echo/plugin/SpaPlugin/src/sites/o2/index.html
+++ b/echo/plugin/SpaPlugin/src/sites/o2/index.html
@@ -9,7 +9,7 @@
   <meta name="author" content="SitePoint">
 
   <link rel="stylesheet" href="css/styles.css?v=1.0">
-
+    <base href="."/>
 </head>
 
 <body>
@@ -20,6 +20,7 @@
   <ul>
       <li><a href="https://www.ato.gov.au/">External site</a></li>
       <li><a href="http://www.http2demo.io/">External (no cert)</a></li>
+      <li><a href="page2.html">Page 2</a></li>
   </ul>
 
 </body>
