added callback mechanism - first draft

--- a/echo/plugin/SpaPlugin/src/sites/o2/index.html
+++ b/echo/plugin/SpaPlugin/src/sites/o2/index.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="utf-8">
 
-  <title>The HTML5 Herald</title>
-  <meta name="description" content="The HTML5 Herald">
+  <title>An o2 page</title>
+  <meta name="description" content="Raw page to simulate various navigations">
   <meta name="author" content="SitePoint">
 
   <link rel="stylesheet" href="css/styles.css?v=1.0">
@@ -18,10 +18,10 @@
   <script src="js/scripts.js"></script>
 
   <ul>
-      <li><a href="https://www.ato.gov.au/">External site</a></li>
-      <li><a href="http://www.http2demo.io/">External (no cert)</a></li>
-      <li><a href="page2.html">Page 2</a></li>
-  </ul>
-
+    <li><a href="https://www.ato.gov.au/">External site (BLOCKED DELIBERATELY ON IOS)</a></li>
+    <li><a href="http://www.http2demo.io/">External (no cert)</a></li>
+    <li><a href="page2.html">Page 2</a></li>
+    <li><a href="toolkit?memberId=12345">toolkit?memberId=12345 (Simulate a redirect with member #)</a></li>
+</ul>
 </body>
 </html>
